--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,19 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.scale-up-ver-top {
+  top: 45px;
+  animation: scale-up-ver-top 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
+@keyframes scale-up-ver-top {
+  0% {
+    transform: scaleY(0.4);
+    transform-origin: 100% 0;
+  }
+  100% {
+    transform: scaleY(1);
+    transform-origin: 100% 0;
+  }
+}
